@@ -29,6 +29,17 @@ summary: 了解适用于ASA R2系统的ONTAP 9。16.1中提供的新功能。
 |===
 
 
+== 协议支持
+
+[cols="2,4"]
+|===
+| 更新 | 说明 
+
+
+| link:../get-started/learn-about.html["NVMe支持对称主动/主动多路径"] | NVMe/FC和NVMe/TCP现在支持对称双主动多路径架构、以便主机和存储之间的所有路径都处于主动/优化状态。 
+|===
+
+
 == 存储效率
 
 [cols="2,4"]
